[package]
name = "meshless_voronoi"
description = "An implementation of the Meshless Voronoi algorithm."
version = "0.5.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuyttenhove/meshless_voro"
documentation = "https://docs.rs/meshless_voronoi"
keywords = ["voronoi", "graphics", "diagram"]
categories = ["graphics", "science", "mathematics"]
exclude = ["plot_vortess.py", "shell.nix"]

[dependencies]
ahash = "0.8"
document-features = "0.2"
glam = "0.27"
hdf5 = { version = "0.8", optional = true }
num-bigint = { version = "0.4" }
num_enum = { version = "0.7.2", default-features = false }
rayon = { version = "1", optional = true }
rstar = "0.12"
rug = { version = "1.24", optional = true }

[features]
default = ["rayon"]
## Enable parallel construction of the Voronoi grid.
rayon = ["dep:rayon"]
## Use the `rug` crate as arbitrary precision integer arithmethic backend instead of 
## the default `big_int`. This can increase performance significantly for highly degenerate 
## seed configurations where lots of arbitrary precision arithmetic is needed. 
## *Disclaimer:* this changes the license to the more restrictive LGPL-3.0+ license.
rug = ["dep:rug"]
## Allow saving Voronoi grids to
## [HDF5 format](https://en.wikipedia.org/wiki/Hierarchical_Data_Format#HDF5).
hdf5 = ["dep:hdf5"]

[dev-dependencies]
float-cmp = "0.9"
rand = "0.8"
